--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "react-scripts": "3.4.3",
     "react-stripe-checkout": "^2.6.3",
     "react-transition-group": "^4.4.1",
+    "reactjs-videobg": "^1.3.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "styled-components": "^5.2.0",
     "use-immer": "^0.4.1"
